--- a/NAMESPACE
+++ b/NAMESPACE
@@ -8,6 +8,12 @@ export(run_em)
 import(ggplot2)
 importFrom(Rcpp,evalCpp)
 importFrom(dplyr,arrange)
+importFrom(dplyr,filter)
+importFrom(dplyr,inner_join)
+importFrom(dplyr,mutate)
+importFrom(dplyr,pull)
+importFrom(dplyr,relocate)
+importFrom(dplyr,select)
 importFrom(magrittr,"%>%")
 importFrom(readr,cols)
 importFrom(readr,read_delim)
@@ -21,4 +27,6 @@ importFrom(stringr,str_replace)
 importFrom(stringr,str_split)
 importFrom(tibble,as_tibble)
 importFrom(tibble,tibble)
+importFrom(tidyr,pivot_longer)
+importFrom(tidyr,pivot_wider)
 useDynLib(BTS, .registration = TRUE)
